@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.rapidoid</groupId>
 		<artifactId>rapidoid</artifactId>
-		<version>5.5.5</version>
+		<version>5.5.5-L</version>
 	</parent>
 
 	<artifactId>rapidoid-integration-tests</artifactId>
@@ -19,25 +19,15 @@
 	<dependencies>
 
 		<!-- TEST -->
-
 		<dependency>
 			<groupId>org.rapidoid</groupId>
-			<artifactId>rapidoid-quick</artifactId>
+			<artifactId>rapidoid-http-server</artifactId>
 			<version>${project.version}</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>ch.qos.logback</groupId>
-					<artifactId>logback-classic</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
-		<!-- FIXME replace rapidoid-fluent with essentials4j -->
 		<dependency>
 			<groupId>org.rapidoid</groupId>
-			<artifactId>rapidoid-fluent</artifactId>
-			<version>5.4.6</version>
-			<scope>test</scope>
+			<artifactId>rapidoid-http-client</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.rapidoid</groupId>
@@ -45,43 +35,11 @@
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>${h2.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>${hsqldb.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.mchange</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>${c3p0.version}</version>
-			<optional>true</optional>
-		</dependency>
-
-		<!-- INTEGRATIONS -->
 
 		<dependency>
-			<groupId>com.github.spullara.mustache.java</groupId>
-			<artifactId>compiler</artifactId>
-			<version>${mustache.java.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.samskivert</groupId>
-			<artifactId>jmustache</artifactId>
-			<version>${jmustache.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>guice</artifactId>
-			<version>${guice.version}</version>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>1.3.5</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -111,6 +69,7 @@
 				<configuration>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
+					<argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
 					<excludes>
 						<exclude>${tests.exclude}</exclude>
 					</excludes>
